--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -9,25 +9,36 @@
 
 
     <body>
+
+
+        <div class='photo' id="div1" style="width: 100px; height: 100px; top:0; left:0; background:#777; position:absolute;"></div>
+        <div class='photo' id="div2" style="width: 100px; height: 100px; top:300px; left:300px; background:#333; position:absolute;"></div>
+
+
+        <svg width="500" height="500"><line x1="50" y1="50" x2="350" y2="350" stroke="black"/></svg>
+
+
+
+        <h1>Testing Dragging and Dropping</h1>
         <div>
-            <div class='photo'>
-                <img id='1' src='../../static/tree/images/duck1.jpg'/>
+            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
+                <img id='1' src='../../static/tree/images/duck1.jpg' ondragstart='drag(event)'/>
             </div>
 
-            <div class='photo'>
-                <img id='2' src='../../static/tree/images/duck2.jpg'/>
+            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
+                <img id='2' src='../../static/tree/images/duck2.jpg' ondragstart='drag(event)'/>
             </div>
 
-            <div class='photo'>
-                <img id='3' src='../../static/tree/images/duck3.jpg'/>
+            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
+                <img id='3' src='../../static/tree/images/duck3.jpg' ondragstart='drag(event)'/>
             </div>
 
-            <div class='photo'>
-                <img id='4' src='../../static/tree/images/duck4.jpg'/>
+            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
+                <img id='4' src='../../static/tree/images/duck4.jpg' ondragstart='drag(event)'/>
             </div>
 
-            <div class='photo'>
-                <img id='5' src='../../static/tree/images/duck5.jpg'/>
+            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
+                <img id='5' src='../../static/tree/images/duck5.jpg' ondragstart='drag(event)'/>
             </div>
 
             <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
@@ -41,9 +52,47 @@
         </div>
 
 
-        <button onclick='myFunct()'>ChangePic</button>
+
+        <div>
+            <h1>Testing Lines</h1>
+        </div>
+
+        <button onclick='changeSVG(getPosition("test1"), getPosition("test2"))'>Move Line</button>
 
 
+        <div id='test1' class='photo'>
+            <img src='../../static/tree/images/duck1.jpg'/>
+            <button onclick='getPosition("test1")'>Get Position</button>
+        </div>
+
+        <svg id='SVG1' width="500" height="500"><line x1="50" y1="50" x2="350" y2="350" stroke="black"/></svg>
+<!--
+        <script src='../../static/tree/methods.js'>
+
+            let pos1 = getPosition(test1)
+            let pos2 = getPosition(test2)
+
+            let x1 = pos1.right
+            let y1 = pos1.top
+            let x2 = pos2.right
+            let y2 = pos2.top
+
+            document.getElementById('SVG1').innerHTML = '<line x1=' + x1 + ' y1=' + y1 + ' x2=' + x2 + ' y2=' + y2 + ' stroke="red"/>'
+
+
+        </script>
+    -->
+        <div id='test2' class='photo'>
+            <img src='../../static/tree/images/duck2.jpg'/>
+            <button onclick='getPosition("test2")'>Get Position</button>
+        </div>
+
+
+
+        <div id='test3' class='photo'>
+            <img src='../../static/tree/images/duck3.jpg'/>
+            <button onclick='getPosition("test3")'>Get Position</button>
+        </div>
 
 
 
