Made Proto Family Tree

--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -88,6 +88,7 @@
         <h1>Testing Tree</h1> 
 
         <a href='draggable'>Dragging</a>
+        <a href='tree'>Tree</a>
 
         <button onclick='changeSVG("node1", "node2", "SVG2")'>Get Position</button>
 
