--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -3,29 +3,40 @@
 <html lang='en'>
 
 <head>
-    <meta http-equiv="Content-Type" content='text/html; charset=utf-8'/>
-    <meta name='viewport' content='width-device-width, initial-scale-1, minimum-scale-1, maximum-scale-1, user-scalable=no'/>
     <title>Tree Structure</title>
-    <link rel='stylesheet' href='../../static/tree/tree.css'/>
+    <link rel='stylesheet' href='../../static/tree/CSS/photos.css'/>
 </head>
 
 
 
-
 <body>
-
-    <div class='tree'>
-
-    <ul>
-
-        <ul class='marriage'> <!--What if you label this UL as marriage and alter there-->
-            <li><a href='#'><img src='../../static/tree/images/duck1.jpg'/><br/><span>Husband</span></a></li>
-            <li><a href='#'><img src='../../static/tree/images/duck1.jpg'/><br/><span>Wife</span></a></li>
-        </ul>
+<div>
+    <div id='nodes' class='nodeBox'>
         
-    </ul>
-
     </div>
+
+
+
+
+<!--Testing to see how nodes looked in nodeBox
+<div class='node'>
+    <img class='photo' src='../../static/tree/images/pictures/1.PNG'>
+    <span style='margin-top:5px;'>1995</span>
+</div>
+-->
+</div>
+
+
+
+
+
+
+
+
+
+
+    <script src='../../static/tree/JS/parse.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 
 
