Tried working with node display

--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -10,23 +10,26 @@
 
 
 <body>
-<div>
-    <div id='nodes' class='nodeBox'>
-        
+    <div style='display: flex; border: 5px solid purple;'>
+        <div style='display: flex; border: 5px solid green;'>
+            <div id='nodes' class='nodeBox'>
+                <!--Inner HTML comes from parse.js-->
+            </div>
+        </div>
+
+
+        <div style=' border:5px solid orange'>
+            <div class='node'>
+                <img class='photo' src='../../static/tree/images/pictures/1.PNG'>
+                <span style='margin-top:5px;'>1995</span>
+            </div>
+        </div>
     </div>
 
 
 
 
-<!--Testing to see how nodes looked in nodeBox
-<div class='node'>
-    <img class='photo' src='../../static/tree/images/pictures/1.PNG'>
-    <span style='margin-top:5px;'>1995</span>
-</div>
--->
-</div>
-
-
+    <!--<button onclick='TestMap()'>Mom</button>-->
 
 
 
@@ -36,7 +39,7 @@
 
 
     <script src='../../static/tree/JS/parse.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 </body>
 
 
