Tried displaying basic ul

--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -135,8 +135,8 @@
 
 
 
-        <script src='../../static/tree/methods.js'></script>
-        <script src='../../static/tree/drag.js'></script>
+        <script src='../../static/tree/JS/methods.js'></script>
+        <script src='../../static/tree/JS/drag.js'></script>
     </body>
 
 
