--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -5,6 +5,7 @@
 <head>
     <title>Tree Structure</title>
     <link rel='stylesheet' href='../../static/tree/CSS/photos.css'/>
+    <link rel='stylesheet' href='../../static/tree/CSS/tree.css'/>
 </head>
 
 
@@ -13,23 +14,21 @@
     <div style='display: flex; border: 5px solid purple;'>
         <div style='display: flex; border: 5px solid green;'>
             <div id='nodes' class='nodeBox'>
-                <!--Inner HTML comes from parse.js-->
             </div>
         </div>
 
 
         <div style=' border:5px solid orange'>
-            <div class='node'>
-                <img class='photo' src='../../static/tree/images/pictures/1.PNG'>
-                <span style='margin-top:5px;'>1995</span>
-            </div>
+            <ul id='testNodes'>
+
+            </ul>
         </div>
     </div>
 
 
 
 
-    <!--<button onclick='TestMap()'>Mom</button>-->
+    <button onclick='TestMap()'>Mom</button>
 
 
 
