--- a/myProjects/photoTree/tree/static/tree/CSS/style.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/style.css
@@ -32,3 +32,41 @@ h1 {
     height: 100px;
     background: blue;
 }
+
+
+html, body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+  
+#svg{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+#line{
+stroke-width:2px;
+stroke:rgb(0,0,0);
+}
+
+.point{
+width: 10px;
+height: 10px;
+background: red;
+position: absolute;
+}
+
+#node1{
+top: 20px;
+left: 50px;
+}
+
+#node2{
+bottom: 20px;
+right: 50px;
+}
