Tried adding tree with tree.css

--- a/myProjects/photoTree/tree/templates/tree/tree.html
+++ b/myProjects/photoTree/tree/templates/tree/tree.html
@@ -11,6 +11,7 @@
 
 
 <body>
+
     <div style='display: flex; border: 5px solid purple;'>
         <div style='display: flex; border: 5px solid green;'>
             <div id='nodes' class='nodeBox'>
@@ -18,22 +19,12 @@
         </div>
 
 
-        <div style=' border:5px solid orange'>
+        <div class='tree' >
             <ul id='testNodes'>
-
+                <!--Using Parse.js, all mom ul's will be placed-->
             </ul>
         </div>
     </div>
-
-
-
-
-    <button onclick='TestMap()'>Mom</button>
-
-
-
-
-
 
 
 
