--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -4,6 +4,7 @@
   <head>
     <title>Chart</title>
     <link rel='stylesheet' href='../../static/tree/CSS/chart.css'/>
+    
   </head>
 
 
@@ -15,8 +16,8 @@
     </figure>
 
 
-
-    
+    <script src='../../static/tree/treeInfo.json'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src='../../static/tree/JS/chart.js'></script>
   </body>
 
