Added link to chart.html

--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -89,6 +89,7 @@
 
         <a href='draggable'>Dragging</a>
         <a href='tree'>Tree</a>
+        <a href='chart'>Chart</a>
 
         <button onclick='changeSVG("node1", "node2", "SVG2")'>Get Position</button>
 
