--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -6,138 +6,16 @@
         <meta charset='utf-8'>
         <title>Interactive Tree</title>
         <link rel='stylesheet' href='../../static/tree/CSS/style.css'/>
-
-        <!--Added to test sortable dragging-->
-
     </head>
 
 
     <body>
-
-<!--
-        <div class='photo' id="div1" style="width: 100px; height: 100px; top:0; left:0; background:#777; position:absolute;"></div>
-        <div class='photo' id="div2" style="width: 100px; height: 100px; top:300px; left:300px; background:#333; position:absolute;"></div>
-
-
-        <svg width="500" height="500"><line x1="50" y1="50" x2="350" y2="350" stroke="black"/></svg>
-
-
-        <h1>Testing Dragging and Dropping</h1>
-        <div>
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='1' src='../../static/tree/images/duck1.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='2' src='../../static/tree/images/duck2.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='3' src='../../static/tree/images/duck3.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='4' src='../../static/tree/images/duck4.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='5' src='../../static/tree/images/duck5.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover="allowDrop(event)">
-                <img id='6' src='../../static/tree/images/duck6.jpg' ondragstart='drag(event)'/>
-            </div>
-
-            <div class='photo' ondrop='drop(event)' ondragover='allowDrop(event)'>
-                <h1>Place Photo Here</h1>
-            </div>
-
-        </div>
-
-
-
-        <div>
-            <h1>Testing Lines</h1>
-        </div>
-
-        <button onclick='changeSVG("test1", "test2", "SVG1")'>Move Line</button>
-
-        <div id='test1' class='photo'>
-            <img src='../../static/tree/images/duck1.jpg'/>
-            <button onclick='getPosition("test1")'>Get Position</button>
-        </div>
-
-
-        <svg id='SVG1' class='line'></svg>
-    
-        <div id='test2' class='photo'>
-            <img src='../../static/tree/images/duck2.jpg'/>
-            <button onclick='getPosition("test2")'>Get Position</button>
-        </div>
-
-
-
-        <div id='test3' class='photo'>
-            <img src='../../static/tree/images/duck3.jpg'/>
-            <button onclick='getPosition("test3")'>Get Position</button>
-        </div>
-
-
-
-    -->
         <h1>Testing Tree</h1> 
 
         <a href='draggable'>Dragging</a>
         <a href='tree'>Tree</a>
         <a href='chart'>Chart</a>
-
-        <button onclick='changeSVG("node1", "node2", "SVG2")'>Get Position</button>
-
-        <div class='tree-level' ondrop='drop(event)' ondragover="allowDrop(event)">
-
-            <div id='node1' class='tree-node' ondragstart='drag(event)'><h1>1</h1></div>
-
-        </div>
-
-        <div class='tree-level' ondrop='drop(event)' ondragover="allowDrop(event)">
-
-            <div id='node3' class='tree-node' ondragstart='drag(event)'><h1>3</h1></div>
-            <div id='node2' class='tree-node' ondragstart='drag(event)'><h1>2</h1></div>
-
-        </div>
-
-
-        <div class='tree-level' ondrop='drop(event)' ondragover="allowDrop(event)">
-
-            <div id='node6' class='tree-node' ondragstart='drag(event)'><h1>6</h1></div>
-            <div id='node5' class='tree-node' ondragstart='drag(event)'><h1>5</h1></div>
-            <div id='node4' class='tree-node' ondragstart='drag(event)'><h1>4</h1></div>
-
-        </div>
-
-
-
-        
-
-
-
-<!--
-        <div id='SVG2'>
-
-        </div>
-
-    <svg class='line' width='114' height ='171'><line x1='570' y1='465' x2='628' y2='319.6' stroke='red'/></svg>
-
-    -->
-
-
-
-
-
-
-
-        <script src='../../static/tree/JS/methods.js'></script>
-        <script src='../../static/tree/JS/drag.js'></script>
+        <a href='delete'>Delete</a>
     </body>
 
 
