--- a/myProjects/photoTree/tree/templates/tree/delete.html
+++ b/myProjects/photoTree/tree/templates/tree/delete.html
@@ -15,6 +15,18 @@
       </ul>
     </figure>
 
+    <div class='footer-box'>
+      <div id='nodeContainer' class='node-container'>
+        <div class='footer-node'><p>TestBox</p></div>
+        <div class='footer-node'><p>TestBox</p></div>
+        <div class='footer-node'><p>TestBox</p></div>
+      </div>
+      <div id='confirmBox' class='confirm-box'>
+        <button onclick='removeRelationship()'>Remove Relationship</button>
+      </div>
+    </div>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src='../../static/tree/JS/delete.js'></script>
