Changing DOM for relation changes

--- a/myProjects/photoTree/tree/templates/tree/delete.html
+++ b/myProjects/photoTree/tree/templates/tree/delete.html
@@ -22,7 +22,7 @@
         <div class='footer-node'><p>TestBox</p></div>
       </div>
       <div id='confirmBox' class='confirm-box'>
-        <button class='remove-relationship-buttton' onclick='removeRelationship()'>Remove Relationship</button>
+        <button id='removeButton' class='remove-relationship-buttton' onclick='removeRelationship()'>Remove Relationship</button>
       </div>
     </div>
 
