--- a/myProjects/photoTree/tree/templates/tree/delete.html
+++ b/myProjects/photoTree/tree/templates/tree/delete.html
@@ -4,7 +4,6 @@
   <head>
     <title>Chart</title>
     <link rel='stylesheet' href='../../static/tree/CSS/chart.css'/>
-    
   </head>
 
 
@@ -16,14 +15,19 @@
     </figure>
 
     <div class='footer-box'>
+
       <div id='nodeContainer' class='node-container'>
         <div class='footer-node'><p>TestBox</p></div>
         <div class='footer-node'><p>TestBox</p></div>
         <div class='footer-node'><p>TestBox</p></div>
       </div>
+
       <div id='confirmBox' class='confirm-box'>
-        <button id='removeButton' class='remove-relationship-buttton' onclick='removeRelationship()'>Remove Relationship</button>
+
       </div>
+
+      <button id='removeButton' class='remove-relationship-buttton' onclick='changeButtonParameters()'>Remove Relationship</button>
+
     </div>
 
     <script src='../../static/tree/JS/delete.js'></script>
