Worked on Add Relationship

--- a/myProjects/photoTree/tree/templates/tree/delete.html
+++ b/myProjects/photoTree/tree/templates/tree/delete.html
@@ -24,6 +24,7 @@
       </div>
 
       <button id='removeButton' class='remove-relationship-buttton' onclick='changeButtonParameters()'>Remove Relationship</button>
+      <button id='addButton' class='add-relationship-buttton' onclick='changeAddButtonParameters()'>Add Relationship</button>
 
     </div>
 
