--- a/myProjects/photoTree/tree/templates/tree/delete.html
+++ b/myProjects/photoTree/tree/templates/tree/delete.html
@@ -23,8 +23,8 @@
 
       </div>
 
-      <button id='removeButton' class='remove-relationship-buttton' onclick='changeButtonParameters()'>Remove Relationship</button>
-      <button id='addButton' class='add-relationship-buttton' onclick='changeAddButtonParameters()'>Add Relationship</button>
+      <button id='removeButton' class='remove-relationship-buttton' onclick='changeRemoveButtonParameters()'>Remove Relationship</button>
+      <button id='addButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Add Relationship</button>
 
     </div>
 
