--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -26,9 +26,9 @@
   background-color: white;
   border: 2px solid lightblue;
   border-radius: 50%;
-  height: 12px;
+  height: 25px; /*height and width originally 12px*/
   position: absolute;
-  width: 12px;
+  width: 25px;
   
   /* The data points have a radius of 8px and the line segment has a width of 3px, 
     so we split the difference to center the data points on the line segment origins */
@@ -99,6 +99,10 @@
 
 .node-image {
   width: 100px;
+}
+
+.tree-image {
+  width: 50px;
 }
 
 .footer-node {
