--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -17,7 +17,7 @@
 /* The unordered list holding the data points, no list styling and no spacing */
 .line-chart {
   list-style: none;
-  margin: 0;
+  margin-top: 50px;
   padding: 0;
 }
 
