Added swap button

--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -26,6 +26,7 @@
       <button id='removeButton' class='remove-relationship-buttton' onclick='changeRemoveButtonParameters()'>Remove Relationship</button>
       <button id='addMotherButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Add Mother/Child Relationship</button>
       <button id='addSpouseButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Add Spouse Relationship</button>
+      <!--<button id='swapButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Swap Nodes</button>-->
 
     </div>
 
