--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -14,8 +14,12 @@
       </ul>
     </figure>
 
-
-
+    <div id='center-menu'>
+      <!--
+      <div id='center-menu' class='center-menu'>
+      </div>
+    -->
+    </div>
     <div class='footer-box'>
 
       <div id='nodeContainer' class='node-container'>
@@ -23,16 +27,10 @@
 
       <div id='confirmBox' class='confirm-box'>
       </div>
-
-
-
     </div>
 
     <div>
-      <button id='removeButton' class='remove-relationship-buttton' onclick='changeRemoveButtonParameters()'>Remove Relationship</button>
-      <button id='addMotherButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Add Mother/Child Relationship</button>
-      <button id='addSpouseButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Add Spouse Relationship</button>
-      <!--<button id='swapButton' class='add-relationship-buttton' onclick=changeAddButtonParameters()>Swap Nodes</button>-->
+      <button id='changeButton' class='button-34' onclick='openMenu()'>Change Relationship</button>
     </div>
 
     <script src='../../static/tree/JS/chart.js'></script>
