--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -15,10 +15,6 @@
     </figure>
 
     <div id='center-menu'>
-      <!--
-      <div id='center-menu' class='center-menu'>
-      </div>
-    -->
     </div>
     <div class='footer-box'>
 
@@ -28,11 +24,11 @@
       <div id='confirmBox' class='confirm-box'>
       </div>
     </div>
-
+<!-- Changed Design, button no longer needed
     <div>
       <button id='changeButton' class='button-34' onclick='openMenu()'>Change Relationship</button>
     </div>
-
+  -->
     <script src='../../static/tree/JS/chart.js'></script>
   </body>
 
