--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -76,7 +76,7 @@
 
 
 .child-line {
-  background-color: blue;
+  background-color: #191970;
   bottom: var(--y);
   height: 3px;
   left: var(--x);
@@ -89,7 +89,7 @@
 }
 
 .spouse-line {
-  background-color: red;
+  background-color: #4169E1;
   bottom: var(--y);
   height: 3px;
   left: var(--x);
@@ -111,7 +111,7 @@
 .node-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  width: 50%;
 }
 
 .node-image {
@@ -179,12 +179,15 @@
 }
 
 body {
-  background-color: #eefcff;
+  background-color: #F5FFFA;
+  ;
 }
 
 
 .center-menu {
   padding: 10px;
+  border: 5px solid black;
+  border-radius: 15px;
 
   position: fixed;
   width: 400px;
@@ -196,7 +199,24 @@ body {
   background: #abcdef;
 }
 
-.menu-pics {
+.menu-pics-container {
   display: flex;
   justify-content: space-around;
+  margin-top: 10px;
+}
+
+.menu-pic {
+  display: flex;
+  border-radius: 25%;
+
+  width: 100px;
+  height: 100px;
+}
+
+.menu-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5px;
+  margin-top: 15px;
 }
