--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -76,7 +76,7 @@
 
 
 .child-line {
-  background-color: #191970;
+  background-color: #7A510A;
   bottom: var(--y);
   height: 3px;
   left: var(--x);
@@ -89,7 +89,7 @@
 }
 
 .spouse-line {
-  background-color: #4169E1;
+  background-color: #FBC25F;
   bottom: var(--y);
   height: 3px;
   left: var(--x);
@@ -157,7 +157,8 @@
   margin: 5px;
 
 
-  background: #5E5DF0;
+  /*background: #5E5DF0;*/
+  background: #67C77F;
   border-radius: 999px;
   box-shadow: #5E5DF0 0 10px 20px -10px;
   box-sizing: border-box;
@@ -179,7 +180,7 @@
 }
 
 body {
-  background-color: #F5FFFA;
+  background-color: #FFFAF0;
   ;
 }
 
@@ -196,7 +197,8 @@ body {
   top: 50%;
   left: 50%;
   margin: -100px 0 0 -150px;
-  background: #abcdef;
+  /*background: #4056A1;*/
+  background: #407A4E;
 }
 
 .menu-pics-container {
