XSpacing, added menu

--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -8,6 +8,8 @@
 
 
   <body>
+
+    <div style='width: 100%; height: 100px; background-color: black;'><h1 style='color:white;'>Menu</h1></h1></div>
     <figure class="css-chart" style="--widget-size: 1200px;">
       <ul id='chart' class="line-chart">
           
