--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <div style='width: 100%; height: 100px; background-color: black;'><h1 style='color:white;'>Menu</h1></h1></div>
+    <div style='width: 100%; height: 100px; background-color: rgb(61, 177, 173);'><h1 style='color:white;'>Menu</h1></h1></div>
     <figure class="css-chart" style="--widget-size: 1200px;">
       <ul id='chart' class="line-chart">
           
@@ -26,11 +26,7 @@
       <div id='confirmBox' class='confirm-box'>
       </div>
     </div>
-<!-- Changed Design, button no longer needed
-    <div>
-      <button id='changeButton' class='button-34' onclick='openMenu()'>Change Relationship</button>
-    </div>
-  -->
+  
     <script src='../../static/tree/JS/chart.js'></script>
   </body>
 
