Added a hover menu

--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -18,6 +18,8 @@
 
     <div id='center-menu'>
     </div>
+    <div id='hover-menu'>
+    </div>
     <div class='footer-box'>
 
       <div id='nodeContainer' class='node-container'>
