--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -86,7 +86,7 @@
 }
 
 .spouse-line {
-  background-color: #dd961a;
+  background-color: #ffc868;
   bottom: var(--y);
   height: 5px;
   left: var(--x);
