Worked on hover effects

--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -27,6 +27,11 @@
 
       <div id='confirmBox' class='confirm-box'>
       </div>
+
+      <div class="tooltip">Hover over me
+        <span class="tooltiptext">Tooltip text</span>
+      </div>
+      
     </div>
   
     <script src='../../static/tree/JS/chart.js'></script>
