--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -226,3 +226,32 @@ body {
   margin-bottom: 5px;
   margin-top: 10px;
 }
+
+
+
+
+
+/*Hover Effects*/
+.tooltip {
+  position: absolute; /*Was relative*/
+  display: inline-block;
+  border-bottom: 1px dotted blue;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: blue;
+  color: black;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
