working on hover menu

--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -221,7 +221,7 @@ body {
 
 .hover-menu {
   padding: 10px;
-  display: inline-table;
+  display: inline-block;
   position: relative;
   background: white;
   border-color: rgb(61, 177, 173);
