--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -227,6 +227,7 @@ body {
   border-color: rgb(61, 177, 173);
   border-style: solid;
   border-width: 2px;
+  cursor: pointer;
 }
 
 /*Hover Effects*/
