--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -43,10 +43,12 @@
 .hover-point {
   background-color: white;
   border: 2px solid lightblue;
-  height: 100px; /*height and width originally 12px*/
   position: absolute;
-  width: 100px;
+  /*
+  height: 100px;
 
+  width: 100px;
+  */
   /* The data points have a radius of 8px and the line segment has a width of 3px, 
     so we split the difference to center the data points on the line segment origins */
   bottom: calc(var(--y) - 21.5px);
