--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -112,6 +112,8 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+
+  background-color: darkgray;
 }
 
 .node-container {
@@ -125,10 +127,17 @@
   height: 100px;
 
   background-color: white;
+
+  margin: 5px;
+
+  border-radius: 50px;
 }
 
 .nodeBox-button {
   background-color: white;
+
+  border-radius: 70px;
+  margin: 5px;
 }
 
 .tree-image {
@@ -138,13 +147,16 @@
 .footer-node {
   display: flex;
   border: 2px solid black;
+
+  border-radius: 50px;
+
 }
 
 .confirm-box {
   display: flex;
   border: 2px solid black;
-  height: 100px;
-  width: 200px;
+  height: 110px;
+  width: 220px;
 }
 
 /*testing hover*/
@@ -189,6 +201,7 @@
 
 body {
   background-color: #fffaf0;
+  /*background-color: #413fb4;*/
 }
 
 .center-menu {
@@ -234,9 +247,15 @@ body {
   display: inline-block;
   position: absolute;
   background: white;
+  /*
   border-color: rgb(61, 177, 173);
   border-style: solid;
   border-width: 2px;
+  */
   cursor: pointer;
+
+  border-radius: 10px;
+
+  box-shadow: #5e5df0 0 10px 20px -10px;
 
 }
