--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -40,6 +40,11 @@
   /*originals 6.5 px and 9.5 px*/
 }
 
+.data-point:hover {
+  transition-duration: .25s;
+  transform: scale(1.2);
+  }
+
 .hover-point {
   background-color: white;
   border: 2px solid lightblue;
@@ -246,10 +251,6 @@ body {
   display: inline-block;
   position: absolute;
   background: white;
-  /*
-  border-color: rgb(61, 177, 173);
-  border-style: solid;
-  border-width: 5px;
-  cursor: pointer;
-  */
+
+  box-shadow: #5e5df0 0 10px 20px -10px;
 }
