--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <div style='width: 100%; height: 100px; background-color: rgb(61, 177, 173);'><h1 style='color:white;'>Menu</h1></h1></div>
+    <div style='width: 100%; height: 100px; background-color: #6486bd; /*rgb(61, 177, 173)*/; font-family: Arial; padding: 3px; font-size: 24px; text-align: center;'><h1 style='color:white;'>Interactive Family Tree</h1></h1></div>
     <figure class="css-chart" style="--widget-size: 1200px;">
 
       <ul id='chart' class="line-chart">
