--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -8,8 +8,14 @@
 
 
   <body>
+    <div>
+      <div style='width: 100%; background-color: #6486bd;'><button>Empty Tree</button></div>
+      <div style='width: 100%; height: 100px; background-color: #6486bd; /*rgb(61, 177, 173)*/; font-family: Arial; padding: 3px; font-size: 24px; text-align: center;'>
 
-    <div style='width: 100%; height: 100px; background-color: #6486bd; /*rgb(61, 177, 173)*/; font-family: Arial; padding: 3px; font-size: 24px; text-align: center;'><h1 style='color:white;'>Interactive Family Tree</h1></h1></div>
+        <h1 style='color:white;'>Interactive Family Tree</h1>
+      </div>
+    </div>
+    <!--<figure class="css-chart" style="--widget-size: 1920px;">-->
     <figure class="css-chart" style="--widget-size: 1200px;">
 
       <ul id='chart' class="line-chart">
