--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -9,7 +9,7 @@
 
   <body>
     <div>
-      <div style='width: 100%; background-color: #6486bd;'><button>Empty Tree</button></div>
+      <div style='width: 100%; background-color: #6486bd;'><button onclick='startEmpty()'>Empty Tree</button></div>
       <div style='width: 100%; height: 100px; background-color: #6486bd; /*rgb(61, 177, 173)*/; font-family: Arial; padding: 3px; font-size: 24px; text-align: center;'>
 
         <h1 style='color:white;'>Interactive Family Tree</h1>
