Working on colors/spacing

--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -87,7 +87,7 @@
 }
 
 .child-line {
-  background-color: #3b5070;
+  background-color: #3b5070; /*was black*/
   bottom: var(--y);
   height: 5px;
   left: var(--x);
