--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <title>Chart</title>
-    <link rel='stylesheet' href='../../static/tree/CSS/chart.css'/>
+    <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
   </head>
-
 
   <body>
     <div>
-      <div style='width: 100%; background-color: #6486bd;'><button onclick='startEmpty()'>Empty Tree</button></div>
-      <div style='width: 100%; height: 100px; background-color: #6486bd; /*rgb(61, 177, 173)*/; font-family: Arial; padding: 3px; font-size: 24px; text-align: center;'>
-
-        <h1 style='color:white;'>Interactive Family Tree</h1>
+      <div style="width: 100%; background-color: #6486bd">
+        <button onclick="startEmpty()">Empty Tree</button>
+      </div>
+      <div
+        style="
+          width: 100%;
+          height: 100px;
+          background-color: #6486bd; /*rgb(61, 177, 173)*/
+          font-family: Arial;
+          padding: 3px;
+          font-size: 24px;
+          text-align: center;
+        "
+      >
+        <h1 style="color: white">Interactive Family Tree</h1>
       </div>
     </div>
     <!--<figure class="css-chart" style="--widget-size: 1920px;">-->
-    <figure class="css-chart" style="--widget-size: 1200px;">
-
-      <ul id='chart' class="line-chart">
-      </ul>
-      <div id='hover-menu'>
-      </div>
+    <figure class="css-chart" style="--widget-size: 1200px">
+      <ul id="chart" class="line-chart"></ul>
+      <div id="hover-menu"></div>
     </figure>
-    <div id='center-menu'>
-    </div>
-    <div class='footer-box'>
+    <div id="center-menu"></div>
+    <div class="footer-box">
+      <div id="nodeContainer" class="node-container"></div>
 
-      <div id='nodeContainer' class='node-container'>
-      </div>
-
-      <div id='confirmBox' class='confirm-box'>
-      </div>
-      
+      <div id="confirmBox" class="confirm-box"></div>
     </div>
-  
-    <script src='../../static/tree/JS/chart.js'></script>
+
+    <script src="../../static/tree/JS/chart.js"></script>
   </body>
-
-
 </html>
-
 
 <!--https://css-tricks.com/how-to-make-a-line-chart-with-css/ -->
