--- a/myProjects/photoTree/tree/templates/tree/draggable.html
+++ b/myProjects/photoTree/tree/templates/tree/draggable.html
@@ -1,16 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='../../static/tree/CSS/style.css'/>
-</head>
+  <head>
+    <title>Chart</title>
+    <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
+  </head>
 
-<body>
+  <body>
+    <div>
+      <div style="width: 100%; background-color: #6486bd">
+        <button onclick="startEmpty()">Empty Tree</button>
+      </div>
+      <div
+        style="
+          width: 100%;
+          height: 100px;
+          background-color: #6486bd; /*rgb(61, 177, 173)*/
+          font-family: Arial;
+          padding: 3px;
+          font-size: 24px;
+          text-align: center;
+        "
+      >
+        <h1 style="color: white">Interactive Family Tree</h1>
+      </div>
+    </div>
+    <!--<figure class="css-chart" style="--widget-size: 1920px;">-->
+    <figure class="css-chart" style="--widget-size: 1200px">
+      <ul id="chart" class="line-chart"></ul>
+      <div id="hover-menu"></div>
+    </figure>
+    <div id="center-menu"></div>
+    <div class="footer-box">
+      <div id="nodeContainer" class="node-container"></div>
 
+      <div id="confirmBox" class="confirm-box"></div>
+    </div>
 
-
-
-  <script src='../../static/tree/JS/drag.js'></script>
-</body>
+    <script src="../../static/tree/JS/chart.js"></script>
+    <script src="../../static/tree/JS/drag.js"></script>
+  </body>
 </html>
+
+<!--https://css-tricks.com/how-to-make-a-line-chart-with-css/ -->
