--- a/myProjects/photoTree/tree/templates/tree/chart.html
+++ b/myProjects/photoTree/tree/templates/tree/chart.html
@@ -9,7 +9,9 @@
     <div>
       <div style="width: 100%; background-color: #6486bd">
         <button onclick="startEmpty()">Empty Tree</button>
-        <button onclick="presentationChildren(data[getDataIndex(11)])">Test</button>
+        <button onclick="presentationChildren(data[getDataIndex(11)])">
+          Test
+        </button>
       </div>
       <div
         style="
