--- a/myProjects/photoTree/tree/templates/tree/draggable.html
+++ b/myProjects/photoTree/tree/templates/tree/draggable.html
@@ -3,6 +3,8 @@
   <head>
     <title>Chart</title>
     <link rel="stylesheet" href="../../static/tree/CSS/chart.css" />
+
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   </head>
 
   <body>
@@ -36,7 +38,7 @@
       <div id="confirmBox" class="confirm-box"></div>
     </div>
 
-    <script src="../../static/tree/JS/chart.js"></script>
+    <script src="../../static/tree/JS/parse.js"></script>
     <script src="../../static/tree/JS/drag.js"></script>
   </body>
 </html>
