Removing unneccessary functions

--- a/myProjects/photoTree/tree/templates/tree/index.html
+++ b/myProjects/photoTree/tree/templates/tree/index.html
@@ -12,12 +12,10 @@
     <body>
         <h1>Testing Tree</h1> 
 
-        <a href='draggable'>Dragging</a>
+        <a href='refactor'>Refactor</a>
         <a href='tree'>Tree</a>
         <a href='chart'>Chart</a>
         <a href='delete'>Delete</a>
     </body>
-
-
 
 </html>
