--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -40,6 +40,15 @@
   transform: scale(1.2);
 }
 
+.svg-line {
+  color: blue;
+}
+
+.svg-line:hover {
+  transition-duration: 0.25s;
+  transform: scale(1.2);
+}
+
 .hover-point {
   background-color: white;
   border: 2px solid lightblue;
