--- a/myProjects/photoTree/tree/static/tree/CSS/chart.css
+++ b/myProjects/photoTree/tree/static/tree/CSS/chart.css
@@ -40,13 +40,13 @@
   transform: scale(1.2);
 }
 
+
 .svg-line {
   color: blue;
 }
 
 .svg-line:hover {
-  transition-duration: 0.25s;
-  transform: scale(1.2);
+  color: red;
 }
 
 .hover-point {
